# AgentSoul

./: .capability_map.md  .companionship_report.md  .editorconfig  .gitignore  .install-tracker.json  .iteration_count  .last_report.txt  .mcp.json  .phase_summary.md  .pre-commit-config.yaml  .soul_health.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  IMPACT_REPORT.md  LICENSE  README.md  architecture-review.html  audit_and_optimization_plan.md  improve-comments-plan.md  install.py  package-lock.json  package.json  plan.md  prompt.md  pyproject.toml  research-nuwa-skill.md  test_new_modules.py  update_plan.md  vitest.config.mts
.codex/: agentsoul-startup.md  config.toml
.prompt_history/: .soul_health.md  prompt-20260406-025201.md  prompt-20260406-060855.md  prompt-20260406-070922.md  prompt-20260406-092824.md  prompt-20260406-095411.md  prompt-20260406-110606.md  prompt-20260406-141730.md  prompt-20260406075312.md  prompt-20260406160744.md  prompt-20260407-143434.md  prompt-20260407-152709.md  prompt-20260407-163227.md  prompt-20260407-171420.md  prompt-20260407-172518.md  prompt-20260407-173515.md  prompt-20260407102140.md  prompt-20260407105531.md  prompt-20260407211526.md  prompt-20260408-234716.md  prompt-20260409-000349.md  prompt-20260409-003716.md  prompt-20260409-084651.md  prompt-20260409-085834.md  prompt-20260409-232115.md  prompt-20260410-022432.md  prompt-20260410-024241.md  prompt-20260410-044458.md
.scratch/: original_main.ts
.trae/: mcp.json
agentsoul/: __init__.py
apps/desktop-v2/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-v2/src-tauri/src/: lib.rs  main.rs
common/: __init__.py
config/: behavior.yaml  persona.yaml
data/: agentsoul.db
docs/: PLAN-deepen-features.md  PRD-v2-full-rewrite.md  api-reference.md
mcp-server/: package-lock.json  package.json
schemas/: health-summary.json
scripts/: convert_unittest_to_pytest.py  dev-desktop.mjs  migrate-tests.mjs  migrate_from_xiaonuan.py  scan_privacy.py
src/: SKILL.md  __init__.py  abstract.py  auto_explore.py  companionship_checker.py  config_loader.py  entry_detect.py  health_check.py  master_base.md  memory_base.md  migration.py  openclaw_installer.py  path_compat.py  secure_base.md  skills_base.md  snapshot.py  soul_base.md  tasks_base.md
tests/: conftest.py  test_abstract.py  test_adaptive_learning.py  test_agent_soul.py  test_client_detectors.py  test_common_cache.py  test_companion_growth.py  test_companionship_checker.py  test_config_loader.py  test_config_manager_cli.py  test_config_manager_templates.py  test_config_manager_validator.py  test_desktop_ipc.py  test_enhanced_memory.py  test_entry_detect.py  test_fact_extractor.py  test_gateway_audit.py  test_gemini_adapter.py  test_health_check.py  test_health_visualization.py  test_health_visualization_cli.py  test_install_mcp_clients.py  (+20 more)
(+475 files in other folders)
