[package]
name = "agentsoul-desktop-v2"
version = "2.0.0-alpha.0"
description = "AgentSoul v2 Tauri Desktop Companion and Control Center shell"
authors = ["AgentSoul"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "agentsoul_desktop_v2"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentsoul-desktop-v2"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
